Update Kliento Logo URL in KlientoPage.astro file

--- a/src/layouts/KlientoPage.astro
+++ b/src/layouts/KlientoPage.astro
@@ -1,7 +1,7 @@
 ---
 import { SecondaryNav } from "../components/TopNav/SecondaryNav";
 import Page from "./Page.astro";
-import klientoLogo from "../assets/images/kliento-logo.png";
+import klientoLogo from "../assets/images/kliento-logo.svg";
 import "../styles/kliento.css";
 ---
 
