Update Kliento logo import from PNG to SVG format

--- a/src/pages/kliento/index.astro
+++ b/src/pages/kliento/index.astro
@@ -1,7 +1,7 @@
 ---
 import { SecondaryNav } from "../../components/TopNav/SecondaryNav";
 import Skeleton from "../../layouts/Skeleton.astro";
-import klientoLogo from "../../assets/images/kliento-logo.png";
+import klientoLogo from "../../assets/images/kliento-logo.svg";
 import Hero from "../../components/KlientoHomepage/Hero.astro";
 import CtaBanner from "../../components/CtaBanner.astro";
 import TokenBundle from "../../components/KlientoHomepage/TokenBundle.astro";
