--- a/src/components/Homepage/UseCases.astro
+++ b/src/components/Homepage/UseCases.astro
@@ -21,10 +21,10 @@ const cardIconClass = "w-12 h-12";
       </div>
 
       <div>
-        <h3 class="text-xl md:text-2xl mb-3">Workload authentication</h3>
+        <h3 class="text-xl md:text-2xl mb-3">Workload authentication simplified</h3>
         <p>
-          Ditch API keys! Clients authenticate by proving their identity (e.g. alice@example.com).
-          Think AWS roles or Azure managed identities, but for the entire Internet!
+          Kliento uses VeraId to simplify workload authentication, without long-lived secrets like
+          API keys and public key distribution as needed by JWTs.
         </p>
         <div class="mt-6">
           <CtaButton href="/kliento" text="Learn about Kliento" variant="primaryVeraid" />
