Kliento: shotern example

--- a/src/components/KlientoHomepage/VeraidIdentifier.astro
+++ b/src/components/KlientoHomepage/VeraidIdentifier.astro
@@ -4,7 +4,7 @@ const identifiers = [
   "wordpress@company.blog",
   "api.customer.com",
   "customer.app",
-  "repo@organisation.github.io",
+  "repo@org.github.io",
 ];
 ---
 
