--- a/src/components/Homepage/UseCases.astro
+++ b/src/components/Homepage/UseCases.astro
@@ -5,65 +5,73 @@ import decentralisedSystems from "../../assets/images/decentralised-systems.png"
 import offlineAuthentication from "../../assets/images/offline-authentication.png";
 import klientoLogo from "../../assets/images/kliento-logo.svg";
 import CtaButton from "../CtaButton.astro";
+import AnimatedSection from "../common/AnimatedSection";
 
 const cardClass = "space-y-2 bg-neutral-800 p-4 rounded-lg border border-neutral-700";
 const cardIconClass = "w-12 h-12";
 ---
 
 <section class="px-4 sm:px-6 py-10 md:py-16 text-sm md:text-base bg-neutral-900">
-  <div class="max-w-6xl mx-auto space-y-8">
-    <h2 class="text-3xl sm:text-4xl md:text-6xl text-center mb-6 lg:mb-8">Use cases</h2>
-    <div
-      class="grid md:grid-cols-2 gap-6 lg:gap-0 items-center bg-neutral-800 p-4 rounded-lg py-6 lg:py-8 border border-neutral-700"
-    >
-      <div class="flex justify-start lg:justify-center">
-        <Image src={klientoLogo} alt="Kliento logo" class="w-2/4 md:w-3/5" />
-      </div>
+  <AnimatedSection client:visible>
+    <div class="max-w-6xl mx-auto space-y-8">
+      <h2 class="text-3xl sm:text-4xl md:text-6xl text-center mb-6 lg:mb-8">Use cases</h2>
+      <div
+        class="grid md:grid-cols-2 gap-6 lg:gap-0 items-center bg-neutral-800 p-4 rounded-lg py-6 lg:py-8 border border-neutral-700"
+      >
+        <div class="flex justify-start lg:justify-center">
+          <Image src={klientoLogo} alt="Kliento logo" class="w-2/4 md:w-3/5" />
+        </div>
 
-      <div>
-        <h3 class="text-xl md:text-2xl mb-3">Workload authentication simplified</h3>
-        <p>
-          Kliento uses VeraId to simplify workload authentication, without long-lived secrets like
-          API keys and public key distribution as needed by JWTs.
-        </p>
-        <div class="mt-6">
-          <CtaButton href="/kliento" text="Learn about Kliento" variant="primaryVeraid" />
+        <div>
+          <h3 class="text-xl md:text-2xl mb-3">Workload authentication simplified</h3>
+          <p>
+            Kliento uses VeraId to simplify workload authentication, without long-lived secrets like
+            API keys and public key distribution as needed by JWTs.
+          </p>
+          <div class="mt-6">
+            <CtaButton href="/kliento" text="Learn about Kliento" variant="primaryVeraid" />
+          </div>
+        </div>
+      </div>
+      <div
+        class="grid md:grid-cols-3 gap-8 [&>div>h3]:text-xl [&>div>h3]:sm:text-xl [&>div>h3]:md:text-xl [&>div>h3]:mt-4"
+      >
+        <div class={cardClass}>
+          <Image src={documentSigning} alt="Document Signing icon" class={cardIconClass} />
+          <h3>Artefact signing</h3>
+          <p>
+            Sign documents, apps, libraries, and other files on behalf of a domain name, without
+            gatekeepers like Adobe or Microsoft.
+          </p>
+        </div>
+
+        <div class={cardClass}>
+          <Image
+            src={offlineAuthentication}
+            alt="Offline Authentication icon"
+            class={cardIconClass}
+          />
+          <h3>Offline user authentication</h3>
+          <p>
+            Enable users of offline systems to authenticate with user-friendly, customisable
+            identifiers. That's how <a href="https://letro.app/en/" class="underline">Letro</a> uses
+            VeraId!
+          </p>
+        </div>
+
+        <div class={cardClass}>
+          <Image
+            src={decentralisedSystems}
+            alt="Decentralised Systems icon"
+            class={cardIconClass}
+          />
+          <h3>Next-gen decentralised systems</h3>
+          <p>
+            VeraId enables systems that are hard to imagine today, like peer-to-peer web hosting
+            with contents reliably attributed to their respective domain names.
+          </p>
         </div>
       </div>
     </div>
-    <div
-      class="grid md:grid-cols-3 gap-8 [&>div>h3]:text-xl [&>div>h3]:sm:text-xl [&>div>h3]:md:text-xl [&>div>h3]:mt-4"
-    >
-      <div class={cardClass}>
-        <Image src={documentSigning} alt="Document Signing icon" class={cardIconClass} />
-        <h3>Artefact signing</h3>
-        <p>
-          Sign documents, apps, libraries, and other files on behalf of a domain name, without
-          gatekeepers like Adobe or Microsoft.
-        </p>
-      </div>
-
-      <div class={cardClass}>
-        <Image
-          src={offlineAuthentication}
-          alt="Offline Authentication icon"
-          class={cardIconClass}
-        />
-        <h3>Offline user authentication</h3>
-        <p>
-          Enable users of offline systems to authenticate with user-friendly, customisable
-          identifiers. That's how <a href="https://letro.app/en/" class="underline">Letro</a> uses VeraId!
-        </p>
-      </div>
-
-      <div class={cardClass}>
-        <Image src={decentralisedSystems} alt="Decentralised Systems icon" class={cardIconClass} />
-        <h3>Next-gen decentralised systems</h3>
-        <p>
-          VeraId enables systems that are hard to imagine today, like peer-to-peer web hosting with
-          contents reliably attributed to their respective domain names.
-        </p>
-      </div>
-    </div>
-  </div>
+  </AnimatedSection>
 </section>
