--- a/src/components/KlientoHomepage/Hero.astro
+++ b/src/components/KlientoHomepage/Hero.astro
@@ -13,7 +13,7 @@ import AnimatedSection from "../common/AnimatedSection";
         class="w-full h-full object-cover opacity-80"
       />
     </div>
-    <AnimatedSection client:visible animationType="Scale">
+    <AnimatedSection client:visible>
       <div class="relative px-4 sm:px-6 space-y-4 lg:space-y-8">
         <h1
           class="text-[2.5rem] sm:text-5xl md:text-6xl lg:text-[5.5rem] text-center leading-tight bg-gradient-to-r from-indigo-400 via-indigo-300 to-indigo-200 !text-transparent bg-clip-text"
