--- a/src/components/Homepage/UseCases.astro
+++ b/src/components/Homepage/UseCases.astro
@@ -26,7 +26,7 @@ const cardIconClass = "w-12 h-12";
           <h3 class="text-xl md:text-2xl mb-3">Workload authentication simplified</h3>
           <p>
             Kliento uses VeraId to simplify workload authentication, without long-lived secrets like
-            API keys and public key distribution as needed by JWTs.
+            API keys or public key distribution as needed by JWTs.
           </p>
           <div class="mt-6">
             <CtaButton href="/kliento" text="Learn about Kliento" variant="primaryVeraid" />
