Add inline-flex and align-middle classes to code elements for improved layout

--- a/src/layouts/Page.astro
+++ b/src/layouts/Page.astro
@@ -69,6 +69,8 @@ const articleClasses = [
   "[&_:not(pre)>code]:font-mono",
   "[&_:not(pre)>code]:break-words",
   "[&_:not(pre)>code]:whitespace-normal",
+  "[&_:not(pre)>code]:inline-flex",
+  "[&_:not(pre)>code]:align-middle",
   "prose-code:font-normal",
   "[&_code]:before:content-['']",
   "[&_code]:after:content-['']",
