--- a/src/components/Homepage/Benefits.astro
+++ b/src/components/Homepage/Benefits.astro
@@ -31,6 +31,10 @@ const CheckIcon = `<div class="w-6 h-6 text-green-400 shrink-0">${checkmarkIcon}
           <Fragment set:html={CheckIcon} />
           <span>Signatures can be produced and verified offline.</span>
         </li>
+        <li class="flex items-center gap-4">
+          <Fragment set:html={CheckIcon} />
+          <span>Independently <a href="/about#security-audit">audited</a>.</span>
+        </li>
       </ul>
     </div>
   </AnimatedSection>
