Update links styles across components for consistency

--- a/src/components/Homepage/Founder.astro
+++ b/src/components/Homepage/Founder.astro
@@ -28,9 +28,7 @@ import AnimatedSection from "../common/AnimatedSection";
           <p>
             Designing and implementing <strong>another</strong> auth protocol is not something I took
             lightly: I know it's hard to get them right and the consequences can be catastrophic. Unfortunately,
-            <a href="/prior-art" class="text-green-400"
-              >no existing technology satisfied our needs</a
-            >.
+            <a href="/prior-art">no existing technology satisfied our needs</a>.
           </p>
 
           <div class="pt-2 space-y-1">
