--- a/src/components/Homepage/UseCases.astro
+++ b/src/components/Homepage/UseCases.astro
@@ -54,8 +54,7 @@ const cardIconClass = "w-12 h-12";
           <h3>Offline user authentication</h3>
           <p>
             Enable users of offline systems to authenticate with user-friendly, customisable
-            identifiers. That's how <a href="https://letro.app/en/" class="underline">Letro</a> uses
-            VeraId!
+            identifiers. That's how <a href="https://letro.app/en/">Letro</a> uses VeraId!
           </p>
         </div>
 
