--- a/src/layouts/Skeleton.astro
+++ b/src/layouts/Skeleton.astro
@@ -107,10 +107,10 @@ const ogUrl = new URL(Astro.url.pathname, siteUrl);
     font-weight: 700;
     color: #ffffff;
   }
-  p a {
+  main a {
     color: #7af2a8;
   }
-  p a:hover {
+  main a:hover {
     color: #b9f7cf;
     text-decoration: underline;
   }
