--- a/src/components/CtaButton.astro
+++ b/src/components/CtaButton.astro
@@ -8,11 +8,12 @@ interface Props {
 const { href, text, variant = "primaryVeraid" } = Astro.props;
 
 const styles = {
-  primaryVeraid: "bg-green-400 hover:bg-green-300 text-black",
-  secondaryVeraid: "bg-transparent hover:bg-green-400/10 text-green-400 border border-green-400",
-  primaryKliento: "bg-indigo-400 hover:bg-indigo-300 text-black",
+  primaryVeraid: "bg-green-400 hover:bg-green-300 !no-underline !text-black",
+  secondaryVeraid:
+    "bg-transparent hover:bg-green-400/10 text-green-400 !no-underline border border-green-400",
+  primaryKliento: "bg-indigo-400 hover:bg-indigo-300 !no-underline !text-black",
   secondaryKliento:
-    "bg-transparent hover:bg-indigo-400/10 text-indigo-400 border border-indigo-400",
+    "bg-transparent hover:bg-indigo-400/10 text-indigo-400 !no-underline border border-indigo-400",
 };
 ---
 
