Fix links styling (#37)
[VMKTG-39](https://github.com/relaycorp/veraid-website/compare/links-styling-fix?expand=1)


[VMKTG-39]:
https://relaycorp.atlassian.net/browse/VMKTG-39?atlOrigin=eyJpIjoiNWRkNTljNzYxNjVmNDY3MDlhMDU5Y2ZhYzA5YTRkZjUiLCJwIjoiZ2l0aHViLWNvbS1KU1cifQ

Co-authored-by: Maribel Ferreira <maribelferreira@users.noreply.github.com>

--- a/src/layouts/Page.astro
+++ b/src/layouts/Page.astro
@@ -89,6 +89,7 @@ const articleClasses = [
 
   "prose-strong:text-white",
   "prose-strong:font-bold",
+  "[&_a>strong]:text-green-300",
   "prose-dt:text-white",
   "prose-dl:text-neutral-400",
   "prose-ol:marker:text-white",
