Add Table of Contents component and integrate it into the Page layout

--- a/src/layouts/KlientoPage.astro
+++ b/src/layouts/KlientoPage.astro
@@ -12,7 +12,7 @@ import "../styles/kliento.css";
     logoSrc={klientoLogo.src}
     slot="kliento-header"
   />
-  <div class="kliento-content">
+  <div class="kliento-content scrollbar">
     <slot />
   </div>
 </Page>
