Fix broken link to security audit

--- a/src/components/Homepage/Benefits.astro
+++ b/src/components/Homepage/Benefits.astro
@@ -33,7 +33,7 @@ const CheckIcon = `<div class="w-6 h-6 text-green-400 shrink-0">${checkmarkIcon}
         </li>
         <li class="flex items-center gap-4">
           <Fragment set:html={CheckIcon} />
-          <span>Independently <a href="/about#security-audit">audited</a>.</span>
+          <span>Independently <a href="/about/#security-audit">audited</a>.</span>
         </li>
       </ul>
     </div>
